Kubernetes3/k8s/api1-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1
spec:
  selector:
    matchLabels:
      app: api1
  template:
    metadata:
      labels:
        app: api1
    spec:
      containers:
      - name: api1
        image: api1-im
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api1-service
spec:
  selector:
    app: api1
  ports:
  - port: 80
    protocol: TCP
    name: http
