Kubernetes3/k8s/api2-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api2
spec:
  selector:
    matchLabels:
      app: api2
  template:
    metadata:
      labels:
        app: api2
    spec:
      containers:
      - name: api2
        image: api2-im
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api2-service
spec:
  selector:
    app: api2
  ports:
  - port: 80
    protocol: TCP
    name: http
