Kubernetes3/k8s/bff-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
spec:
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
      - name: bff
        image: bff-im
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bff-service
spec:
  selector:
    app: bff
  ports:
  - port: 80
    protocol: TCP
    name: http
  type: LoadBalancer
